  * Update kernel tests for i386 and powerpc.
  * Change kernel usability tests for all arches so that by default any
    postfix is allowed, but only when separated from the flavor by a hyphen.
    This allows both standard postfixes (e.g. -smp) postfixes for custom built
    images, and is used to support updated kernel meta packages for stable.

 -- Frans Pop <fjp@debian.org>  Tue, 05 Feb 2008 15:11:30 +0100

base-installer (1.86) unstable; urgency=low

  [ Martin Michlmayr ]
  * Add support for the Orion (ARM) platform.

  [ Updated translations ]
  * Slovak (sk.po) by Ivan Masár

 -- Martin Michlmayr <tbm@cyrius.com>  Thu, 29 Nov 2007 09:15:41 +0100

base-installer (1.85) unstable; urgency=low

  * Bind mount /dev to /target/dev instead of creating device nodes for
    devicemapper etc.
  * Ensure static devices created during installation are preserved by first
    bind mounting /target/dev on /dev/.static/dev/. MAKEDEV will then detect
    udev is used (provided proc is mounted in /target).
    Note: any devices created in /target/dev/ itself will get lost.
  * Utility pkgdetails moved from debootstrap-udeb to bootstrap-base so that
    debootstrap-udeb can become 'Architecture: all'.
  * Requires debootstrap-udeb (1.0.7).

 -- Frans Pop <fjp@debian.org>  Wed, 14 Nov 2007 12:16:37 +0100

base-installer (1.84) unstable; urgency=low

  [ Frans Pop ]
  * Drop isinstallable test for sarge, we don't support sarge installs
    anymore.
  * Remove support for sparc32.

  [ Colin Watson ]
  * Clean up /tmp/available_kernels.txt.unfiltered too.

  [ Joey Hess ]
  * Install busybox before installing initramfs-tools, to support version 0.91
    which will only recommend busybox.

  [ Updated translations ]
  * Bengali (bn.po) by Jamil Ahmed
  * Italian (it.po) by Stefano Canepa
  * Dutch (nl.po) by Frans Pop
  * Swedish (sv.po) by Daniel Nylander
  * Vietnamese (vi.po) by Clytie Siddall

 -- Otavio Salvador <otavio@debian.org>  Tue, 11 Sep 2007 09:12:17 -0300
