@@ -2,7 +2,9 @@ subarch 5kc-malta
 cpuinfo 5kc-malta.cpuinfo
 majors 2.6
 flavour 5kc-malta
-kernel-2.6 linux-image-2.6-5kc-malta
+kernel-2.6 \
+  linux-image-2.6-5kc-malta \
+  linux-image-2.6-4kc-malta
 usable \
   linux-image-2.6-4kc-malta \
   linux-image-2.6-5kc-malta
