@@ -18,8 +18,9 @@ base-installer (1.87) UNRELEASED; urgency=low
     postfix is allowed, but only when separated from the flavor by a hyphen.
     This allows both standard postfixes (e.g. -smp) postfixes for custom built
     images, and is used to support updated kernel meta packages for stable.
+  * mips/mipsel: allow fallback to 4kc-malta kernel for 5kc-malta.
 
- -- Frans Pop <fjp@debian.org>  Tue, 05 Feb 2008 15:11:30 +0100
+ -- Frans Pop <fjp@debian.org>  Tue, 05 Feb 2008 15:23:24 +0100
 
 base-installer (1.86) unstable; urgency=low
 
